java-design-patterns-03/src/main/java/com/farhad/example/refactoring/call_super/bad/BankingEvent.java
package com.farhad.example.refactoring.call_super.bad;

public class BankingEvent {

}
